Fixed the clipping of the main element

--- a/TestingWithBlazor/Shared/MainLayout.razor.css
+++ b/TestingWithBlazor/Shared/MainLayout.razor.css
@@ -5,14 +5,19 @@
     background-color: var(--primary-color);
     color: var(--primary-text-color);
     position: sticky;
-    overflow-y: auto;
+    overflow-y: clip;
     height:100vh;
+    max-height:100vh;
 }
 
-.on-top{
-    position:fixed;
-    width:100%;
-    z-index:2;
+.main{
+    overflow-y:auto;
+}
+
+.on-top {
+    position: fixed;
+    width: 100%;
+    z-index: 2;
 }
 
 .main {
